# mpiStochEst

./: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  mpismc.sh  ppdebug.R
autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
conjsmc/: Makefile  Makefile.am  Makefile.in  conjsmc  conjsmc.c
conjsmc/.deps/: conjsmc.Po
criticals/: Makefile  Makefile.am  Makefile.in  criticals  criticals.c
criticals/.deps/: criticals.Po
fcsread/: Makefile  Makefile.am  Makefile.in  fcsread  fcsread.c  problem.xml
fcsread/.deps/: fcsread.Po
gridtest/: Makefile  Makefile.am  Makefile.in  gridtest  gridtest.c
gridtest/.deps/: gridtest.Po
mpiabck/: Makefile  Makefile.am  Makefile.in  mpiabck  mpiabck.c  problem.xml  problemg.xml
mpiabck/.deps/: mpiabck.Po
mpifind0/: Makefile  Makefile.am  Makefile.in  auxfun.c  auxfun.h  ldl.c  matrix_support.c  mpifind0  mpifind0.c  solver.c  solver.h  util.c
mpifind0/.deps/: auxfun.Po  ldl.Po  matrix_support.Po  mpifind0.Po  solver.Po  util.Po
mpismc/: Makefile  Makefile.am  Makefile.in  mpismc  mpismc.c  p_synpi1.xml
mpismc/.deps/: mpismc.Po
mpismc/bioinfo/: p_lacgfp10_del_fcs.xml  p_lacgfp10_del_txt.xml  p_lacgfp7.xml  p_lacgfp7_syn.xml  p_lacgfp8_del.xml  p_lacgfp8_wt.xml  problem2.xml  problem_birthdeath.xml  problem_fbk.xml  problem_iff.xml  problem_lacgfp.xml  problem_lacgfp2.xml  problem_lacgfp2_syndata.xml  problem_lacgfp3.xml  problem_lacgfp4.xml  problem_lacgfp4_flowdata.xml  problem_lacgfp5.xml  problem_lacgfp5_del.xml  problem_lacgfp5_flowdata.xml  problem_lacgfp6.xml  problem_lacgfp7.xml  problem_lacgfp9.xml  problem_lacgfp9_2.xml
mpismc/synpi/: SKA240.fcs  SKA418 20uM 1h.fcs  SKA418 20uM 2h.fcs  SKA418 20uM 3h.fcs  SKA418 20uM 4h.fcs  SKA418 20uM 5h.fcs  SKA418 20uM 6h.fcs  SKA418 20uM 7h.fcs  SKA418 20uM 8h.fcs  SKA418 overnight.fcs
