#	Automake script for
#
#	MPISTOCHEST/CONJSMC
#
# 
#	Created by Gabriele Lillacci in March 2013.
#	Latest revision: March 2013.
#
#
#	This free software is available under the Creative Commons Attribution Non-Commercial Share Alike License.
#	You are permitted to use, share, copy, redistribute and adapt this software as long as appropriate credit
#	is given to the original author, all derivative works are distributed under the same license or a compatible one,
#	and this software and its derivatives are not used for commercial purposes.
#	For more information, visit http://creativecommons.org/licenses/by-nc-sa/3.0/ or contact
#	Creative Commons, 171 2nd Street, Suite 300, San Francisco, California, 94105, USA.


bin_PROGRAMS = conjsmc
conjsmc_SOURCES = conjsmc.c