#	Automake script for
#
#	MPISTOCHEST/MPIFIND0
#
#
# This file is part of mpiStochEst.
# Copyright 2011-2017 Gabriele Lillacci.
#
# mpiStochEst is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# mpiStochEst is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with mpiStochEst.  If not, see <http://www.gnu.org/licenses/>.

bin_PROGRAMS = mpifind0
mpifind0_SOURCES = mpifind0.c solver.h solver.c ldl.c matrix_support.c util.c auxfun.h auxfun.c
