#	Automake script for
#
#	MPISTOCHEST/MPISMC
#
# 
#	Created by Gabriele Lillacci in May 2012.
#	Latest revision: May 2012.
#
#
#	This free software is available under the Creative Commons Attribution Non-Commercial Share Alike License.
#	You are permitted to use, share, copy, redistribute and adapt this software as long as appropriate credit
#	is given to the original author, all derivative works are distributed under the same license or a compatible one,
#	and this software and its derivatives are not used for commercial purposes.
#	For more information, visit http://creativecommons.org/licenses/by-nc-sa/3.0/ or contact
#	Creative Commons, 171 2nd Street, Suite 300, San Francisco, California, 94105, USA.


bin_PROGRAMS = mpismc
mpismc_SOURCES = mpismc.c